--- a/tests/test.html
+++ b/tests/test.html
@@ -3,12 +3,12 @@
 <head>
 	<meta charset="utf-8">
 	<title>QUnit Tests for reference</title>
-	<link rel="stylesheet" href="../components/qunit/qunit.css">
+	<link rel="stylesheet" href="../components/qunit/qunit/qunit.css">
 </head>
 <body>
 	<div id="qunit"></div>
 	<div id="qunit-fixture"></div>
-	<script src="../components/qunit/qunit.js"></script>
+	<script src="../components/qunit/qunit/qunit.js"></script>
 	<script src="../lib/reference.js"></script>
 	<script src="test.js"></script>
 </body>
