--- a/tests/test.html
+++ b/tests/test.html
@@ -10,6 +10,7 @@
 	<div id="qunit-fixture"></div>
 	<script src="../components/qunit/qunit/qunit.js"></script>
 	<script src="../lib/reference.js"></script>
+	<script src="../lib/reference-index.js"></script>
 	<script src="test.js"></script>
 </body>
 </html>
